<resources>
    <string name="app_name">E-Legion Персональная Книжка</string>

    <string name="invite_approved">Поздравляем, теперь вы в команде e-legion!</string>
    <string name="invite_pending">Ваша заяка на рассмотрении</string>
    <string name="invite_rejected">Сожалеем, но заявка отклонена</string>
    <string name="invite_fired">Сожалеем вы больше не с нами…</string>
    <string name="invite_error">Что-то пошло не так!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile_name">Имя Фамилия</string>
    <string name="profile_status">Статус</string>
    <string name="profile_birthday">Дата рождения</string>
    <string name="event_title">Название</string>
    <string name="save">save</string>
    <string name="write_note">write_note</string>
    <string name="to_accept">Принять</string>
    <string name="to_reject">Отклонить</string>
    <string name="profile_mail">Почта</string>
    <string name="profile_edit">Редактировать профиль</string>
    <string name="profile_news">Новости</string>
    <string name="profile_articles">Статьи</string>
    <string name="profile_requests">заявки</string>
    <string name="profile_calendar">Календарь</string>
    <string name="profile_admin_requests">Админ (заявки)</string>
    <string name="admin_request_name">Имя фамилия</string>
    <string name="profile_position">Должность</string>
    <string name="profile">Профиль</string>
    <string name="no_event">Нет события</string>
</resources>