<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logon_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.user.profile.LogonActivity">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="167dp"
            android:layout_height="178dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_logo"
                app:civ_border_color="#03A9F4"
                app:civ_border_width="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo"
                tools:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/position_colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="#4CAF50"
                android:padding="5dp"
                android:text="@string/profile_position" />
        </RelativeLayout>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:text="@string/profile_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_birthday"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:text="@string/profile_birthday"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/profile_position"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/profile_position"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/profile_position"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:text="@string/profile_mail"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/profile_birthday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/logon_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circularProgressIndicator" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:indeterminate="false"
            android:indeterminateOnly="false"
            android:max="100"
            android:progress="40"
            app:layout_constraintStart_toEndOf="@+id/bonus_count"
            app:layout_constraintTop_toBottomOf="@+id/achieve_status" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="68dp"
            android:text="Число бонусов: "
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/bonus_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="40 / 100"
            android:textColor="#4CAF50"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView" />

        <TextView
            android:id="@+id/achieve_status_label"
            android:layout_width="55dp"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:text="Статус: "
            android:textColor="#000000"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/achieve_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="Android junior"
            android:textColor="#C31414"
            app:layout_constraintBaseline_toBaselineOf="@+id/achieve_status_label"
            app:layout_constraintStart_toEndOf="@+id/achieve_status_label" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="29dp"
            android:layout_height="30dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/achieve_status_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:srcCompat="@android:drawable/star_big_on" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        app:menu="@menu/profile_side_nav_admin_menu"
        android:id="@+id/logon_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        />

</androidx.drawerlayout.widget.DrawerLayout>